--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -10,3 +10,5 @@
 @import './pages/cart';
 @import './pages/about';
 @import './pages/service';
+@import './pages/admin';
+@import './pages/checkout';
