--- a/src/styles/pages/_prouducts.scss
+++ b/src/styles/pages/_prouducts.scss
@@ -1,3 +1,7 @@
+.container h1 {
+  font-weight: 700;
+  text-shadow: 0 3px 3px rgba(90, 80, 75, 0.1);
+}
 .category {
   .btn {
     letter-spacing: 2px;
