check order change styles

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -11,4 +11,4 @@
 @import './pages/about';
 @import './pages/service';
 @import './pages/admin';
-@import './pages/checkout';
+@import './pages/checkOrder';
