--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -14,20 +14,15 @@ $backgroundColor: #fffcf7;
   min-height: calc(100dvh - 280px);
 }
 .loading {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: $zIndex-7;
-  background-color: rgba(33, 37, 41, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
+  min-height: 300px;
   .loading-animation {
-    width: 100%;
-    height: 100%;
+    width: 40px;
+    height: 40px;
   }
   &.loading-hide {
     opacity: 0;
