--- a/src/styles/pages/_checkOrder.scss
+++ b/src/styles/pages/_checkOrder.scss
@@ -1,3 +1,32 @@
+.steps {
+  li {
+    width: calc(33% - 0.7rem);
+    background: rgba(237, 235, 234, 0.6);
+    padding: 1rem;
+    text-align: center;
+    color: #6c757d;
+    & + li {
+      margin-left: 1rem;
+    }
+    &.active {
+      background: #414666;
+      color: #fff;
+    }
+    small {
+      display: block;
+    }
+  }
+}
+
+.cart-img {
+  width: 5rem;
+  height: 5rem;
+  overflow: hidden;
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .input-group {
   position: relative;
   display: flex;
